--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@ Georepublic Japan</p>
 </li>
 </ul>
 <p><a href="https://github.com/smellman/jica_2023">https://github.com/smellman/jica_2023</a></p>
+<ul>
+<li>This presentation is written in Markdown
+<ul>
+<li>You can edit this presentation with any text editor</li>
+<li>You can convert this presentation to PDF or PowerPoint</li>
+<li>You can download the presentation from the link below
+<ul>
+<li><a href="https://smellman.github.io/jica_2023/jica-seminar-2023.pdf">https://smellman.github.io/jica_2023/jica-seminar-2023.pdf</a></li>
+<li><a href="https://smellman.github.io/jica_2023/jica-seminar-2023.pptx">https://smellman.github.io/jica_2023/jica-seminar-2023.pptx</a></li>
+<li><a href="https://smellman.github.io/jica_2023/">https://smellman.github.io/jica_2023/</a></li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
 <footer>JICA Seminar 2023</footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="3" data-footer="JICA Seminar 2023" data-theme="default" style="--footer:JICA Seminar 2023;--theme:default;">
